--- a/app.css
+++ b/app.css
@@ -97,3 +97,30 @@ code {
     font-weight: bold;
     margin-left: 20px;
 }
+
+footer {
+    background-color: #863ae8;
+}
+
+footer ul {
+    width: 100%;
+    max-width: 900px;
+    list-style: none;
+    margin: 0 auto;
+    text-align: center;
+    padding: 28px 0;
+}
+
+footer ul li {
+    display: inline;
+    padding: 0px 16px;
+}
+
+footer li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+footer li a:hover {
+    text-decoration: underline;
+}
